box align within reviews section fix

--- a/src/components/home/Reviews/Reviews.css
+++ b/src/components/home/Reviews/Reviews.css
@@ -1,70 +1,69 @@
 #reviewsSection {
-  /* height: 400px; */
   background-color: #F0F7FE;
   width: 100vw;
-  /* max-width: 1000px; */
   justify-self: center;
-  padding: 2rem 0 4rem;
-  margin-bottom: 200px;
+  padding: 2rem 0 2rem;
+  margin-bottom: 100px;
 }
 
 #reviewsTitle {
   text-align: center;
   font-size: 3.5rem;
   color: #0a4d78;
-  margin-bottom: 2rem;
+  margin-bottom: 0rem;
 }
 
 .carousel-item {
-  justify-content: center;
+  justify-items: center;
 }
 
 .gridContainer {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 20px;
+  grid-template-rows: 300px 300px;
   max-width: 1200px;
+  justify-items: center;
+  align-items: center;
   margin: auto;
-  justify-self: center;
 }
 
 .reviewImg {
-  /* width: 100%; */
+  height: 300px;
   justify-items: center;
-  align-items: center;
   text-align: center;
   display:grid;
 }
 
+
+.reviewImg > img {
+  width: 60%;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px #e2e2e2;
+}
+
 .reviewImg1Of4 {
-  width: 50%;
   grid-column: 1/2;
   grid-row: 1/2;
   object-fit: contain;
-
+  align-self: center;
 }
 
 .reviewImg2Of4 {
-  width: 50%;
   grid-column: 2/3;
   grid-row: 1/2;
   object-fit: contain;
+  align-self: center;
 }
 
 .reviewImg3Of4 {
-  width: 50%;
   grid-column: 1/2;
   grid-row: 2/3;
-
+  object-fit: contain;
+  align-self: top;
 }
 
 .reviewImg4Of4 {
-  width: 50%;
   grid-column: 2/3;
   grid-row: 2/3;
-}
-
-.carousel-control-prev-icon {
-color: hotpink;
+  object-fit: contain;
 }
